--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Sirela-Gartanen</title>
   </head>
+
   <body>
-    <h1>The Beasts</h1>
+    <header>
+      <div class="header">
+        <div class="navbar">
+          <ul>
+            <li>
+              <a href="#">home</a>
+            </li>
+            <li><a href="#">Our Imapct</a></li>
+            <li><a href="#">Video</a></li>
+
+            <li><a href="#"> Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
