--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sirela-Gartanen</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>The Beasts</h1>
+
+
+
+    <!--global(re-usable) footer-->  
+
+    <footer>
+
+
+
+    </footer>
+  
+  
   </body>
 </html>
