--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Sirela-Gartanen</title>
-  <!-- Font Awesome ================================================== -->
+  <!-- Font Awesome =========================================== -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
-  <!-- CSS -->
+  <!-- CSS 
+  =========================================== -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <h1>The Beasts</h1>
 
-  <!-- DEAN ========================================================== -->
+  <!-- DEAN =========================================== -->
   <section>
     <div class="container">
       <h2>We drive real, tangible change for animals.</h2>
@@ -28,7 +29,8 @@
             <img src="./assets/image/hunting.png" alt="cruel to animals" />
           </div>
           <div class="change__body">
-            <a href="#">Undercover investigation exposes grisly cruelty at Oregon wildlife killing contest; lawmakers move to
+            <a href="#">Undercover investigation exposes grisly cruelty at Oregon wildlife killing contest; lawmakers
+              move to
               ban such events in the state</a>
           </div>
           <div class="change__bottom">
@@ -42,7 +44,8 @@
             <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
           </div>
           <div class="change__body">
-            <a href="#">The Humane Society of the United States makes new leadership appointments and important governance
+            <a href="#">The Humane Society of the United States makes new leadership appointments and important
+              governance
               changes</a>
           </div>
           <div class="change__bottom">
@@ -67,7 +70,7 @@
     </div><!-- container -->
   </section>
 
-  <!-- GIFT ====================================================================== -->
+  <!-- GIFT =========================================== -->
   <div class="gift">
     <div class="text-wrapper">
       <div>
@@ -80,7 +83,7 @@
     </div><!-- text-wrapper -->
   </div><!-- gift -->
 
-  <!-- NEWS ======================================================================= -->
+  <!-- NEWS =========================================== -->
   <div class="news">
     <div class="container">
       <div class="news__information">
@@ -89,10 +92,11 @@
         </div><!-- news__title -->
 
         <div>
-          <p class="news__body">Our undercover investigation reveals the gruesome killing of coyotes in Oregon for cash and prizes.
+          <p class="news__body">Our undercover investigation reveals the gruesome killing of coyotes in Oregon for cash
+            and prizes.
             Prevent this cruelty from happening in your state!</p>
         </div><!-- news__body -->
-        
+
         <div class="news__btn">
           <a href="#" target="_blank" class="news__link">Learn How</a>
         </div><!-- news__btn -->
