--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sirela-Gartanen</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <h1>The Beasts</h1>
+    <!-- **********JOHANNA*********** -->
+    <section class="container-section1">
+      <div class="fox-image">
+        <div class="text-box1">
+          <p>
+            We think big. We are fearless. We stand up and fight for all animals
+            who are suffering.<br />
+
+            <a href="#" class="text-box1-link">Our big fights</a>
+          </p>
+        </div>
+      </div>
+      <div class="how-you-can-help">
+        <div class="happy-dog">
+          <img id="happydog-img" src="assets/happydog.jpg" alt="happy-dog" />
+        </div>
+        <div class="text-box2">
+          <p>Together, we can create a more humane society.</p>
+          <a href="#" class="text-box2-link"
+            ><strong>How you can help</strong></a
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
