--- a/index.html
+++ b/index.html
@@ -5,22 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
     <title>Sirela-Gartanen</title>
   </head>
 
   <body>
     <header>
       <div class="header">
+        <div class="img-box">
+          <img src="/assets/images/BEASTS3.PNG" alt="" />
+        </div>
         <div class="navbar">
           <ul>
             <li>
-              <a href="#">home</a>
+              <a href="#">Home</a>
             </li>
             <li><a href="#">Our Imapct</a></li>
             <li><a href="#">Video</a></li>
 
             <li><a href="#"> Contact Us</a></li>
           </ul>
+        </div>
+        <div class="btn">
+          <a href="#" class="donate-btn">Donate</a>
+          <div class="container">
+            <div class="search-box">
+              <input type="text" />
+              <span></span>
+            </div>
+          </div>
         </div>
       </div>
     </header>
