happydog container fix

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="text-box1">
           <p>
             We think big. We are fearless. We stand up and fight for all animals
-            who are suffering.<br />
-
-            <a href="#" class="text-box1-link">Our big fights</a>
+            who are suffering.
           </p>
+
+          <p><a href="#" class="text-box1-link">Our big fights</a></p>
         </div>
       </div>
 
