footer-began-evans

--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sirela-Gartanen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Beast</title>
   </head>
   <body>
-    <h1>The Beasts</h1>
-
-
-
-    <!--global(re-usable) footer-->  
+    <!--global(re-usable) footer-->
 
     <footer>
-      <section class="left-grid"></section>
+      <section class="footer-top">
+        <section class="f-box"></section>
+      </section>
 
+      <section class="footer-bottom">
+        <section class="f-box"></section>
+      </section>
     </footer>
-  
-  
   </body>
 </html>
