--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
             who are suffering.
           </p>
 
-          <p><a href="#" class="text-box1-link">Our big fights</a></p>
+          <p>
+            <a href="#" class="text-box1-link"
+              >Our big fights <i class="fas fa-arrow-right"></i
+            ></a>
+          </p>
         </div>
       </div>
 
