background image responsive fixed

--- a/index.html
+++ b/index.html
@@ -15,145 +15,138 @@
 <body>
   <h1>The Beasts change</h1>
 
-    <!-- **********JOHANNA*********** -->
-    <section class="container-section1">
-      <div class="fox-image">
-        <div class="text-box1">
-          <div>
-              <p>
-                  We think big. We are fearless. We stand up and fight for all animals
-                  who are suffering.
-                </p>
-          </div>
-          <div>
-              <p><a href="#" class="text-box1-link">Our big fights</a></p>
-          </div>
-
-          <p>
-            <a href="#" class="text-box1-link"
-              >Our big fights <i class="fas fa-arrow-right"></i
-            ></a>
-          </p>
-          
-        </div>
-      </div>
-      </div>
-
-      <div class="how-you-can-help">
-        <div class="happy-dog">
-          <img id="happydog-img" src="assets/image/happydog.jpg" alt="happy-dog" />
-        </div>
-        <div class="text-box2">
-          <p>Together, we can create a more humane society.</p>
-          <a href="#" class="text-box2-link"><strong>How you can help</strong></a>
-        </div>
-      </div>
-    </section>
-    <!--Johanna ending -->
-
-    <!-- DEAN =========================================== -->
-    <section>
-      <div class="container">
-        <h2>We drive real, tangible change for animals.</h2>
-        <hr />
-
-        <div class="changes">
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/hunting.png" alt="cruel to animals" />
-            </div>
-            <div class="change__body">
-              <a href="#">Undercover investigation exposes grisly cruelty at Oregon
-                wildlife killing contest; lawmakers move to ban such events in
-                the state</a>
-            </div>
-            <div class="change__bottom">
-              <p>"A Human Wold" blog</p>
-            </div>
-            <a href="#"><i class="fas fa-arrow-right"></i></a>
-          </div>
-          <!-- change -->
-
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
-            </div>
-            <div class="change__body">
-              <a href="#">The Humane Society of the United States makes new leadership
-                appointments and important governance changes</a>
-            </div>
-            <div class="change__bottom">
-              <p>Press release</p>
-            </div>
-            <a href="#"><i class="fas fa-arrow-right"></i></a>
-          </div>
-          <!-- change -->
-
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/2018.png" alt="2018 calendar" />
-            </div>
-            <div class="change__body">
-              <a href="#">A big year for animals</a>
-            </div>
-            <div class="change__bottom">
-              <p><em>All Animals</em> magazine</p>
-            </div>
-            <a href="#"><i class="fas fa-arrow-right"></i></a>
-          </div>
-          <!-- change -->
-        </div>
-        <!-- changes -->
-      </div>
-      <!-- container -->
-    </section>
-
-    <!-- GIFT =========================================== -->
-    <div class="gift">
-      <div class="text-wrapper">
+  <!-- **********JOHANNA*********** -->
+  <section class="container-section1">
+    <div class="fox-image">
+      <div class="text-box1">
         <div>
-          <p class="gift__title">
-            Your gift can do so much for animals in need.
+          <p>
+            We think big. We are fearless. We stand up and fight for all animals
+            who are suffering.
           </p>
         </div>
-        <!-- gift__title -->
-        <hr />
-        <div class="gift__btn">
-          <a href="#" target="_blank" class="gift__link">Give now</a>
+        <div>
+          <p><a href="#" class="text-box1-link">Our big fights</a></p>
         </div>
-        <!-- gift__btn -->
-      </div>
-      <!-- text-wrapper -->
-    </div>
-    <!-- gift -->
 
-    <!-- ARTICLE =========================================== -->
-    <article>
-      <div class="container">
-        <div class="news__container">
-          <div class="news__information">
-            <div>
-              <p class="news__title">Breaking</p>
-            </div>
-            <!-- news__title -->
-            <div>
-              <p class="news__body">
-                Our undercover investigation reveals the gruesome killing of
-                coyotes in Oregon for cash and prizes. Prevent this cruelty from
-                happening in your state!
-              </p>
-            </div>
-            <!-- news__body -->
-            <div class="news__btn">
-              <a href="#" target="_blank" class="news__link">Learn How</a>
-            </div>
-            <!-- news__btn -->
-          </div><!-- news__information -->
-        </div>
-        <!-- news__container -->
       </div>
-      <!-- container -->
-    </article>
+    </div>
+    </div>
+
+    <div class="how-you-can-help">
+      <div class="happy-dog">
+        <img id="happydog-img" src="assets/image/happydog.jpg" alt="happy-dog" />
+      </div>
+      <div class="text-box2">
+        <p>Together, we can create a more humane society.</p>
+        <a href="#" class="text-box2-link"><strong>How you can help</strong></a>
+      </div>
+    </div>
+  </section>
+  <!--Johanna ending -->
+
+  <!-- DEAN =========================================== -->
+  <section>
+    <div class="container">
+      <p class="changes__text">We drive real, tangible change for animals.</p>
+      <hr />
+
+      <div class="changes">
+        <div class="change">
+          <div class="change__top">
+            <img src="./assets/image/hunting.png" alt="cruel to animals" />
+          </div>
+          <div class="change__body">
+            <a href="#">Undercover investigation exposes grisly cruelty at Oregon
+              wildlife killing contest; lawmakers move to ban such events in
+              the state</a>
+          </div>
+          <div class="change__bottom">
+            <p>"A Human Wold" blog</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
+        </div>
+        <!-- change -->
+
+        <div class="change">
+          <div class="change__top">
+            <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
+          </div>
+          <div class="change__body">
+            <a href="#">The Humane Society of the United States makes new leadership
+              appointments and important governance changes</a>
+          </div>
+          <div class="change__bottom">
+            <p>Press release</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
+        </div>
+        <!-- change -->
+
+        <div class="change">
+          <div class="change__top">
+            <img src="./assets/image/2018.png" alt="2018 calendar" />
+          </div>
+          <div class="change__body">
+            <a href="#">A big year for animals</a>
+          </div>
+          <div class="change__bottom">
+            <p><em>All Animals</em> magazine</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
+        </div>
+        <!-- change -->
+      </div>
+      <!-- changes -->
+    </div>
+    <!-- container -->
+  </section>
+
+  <!-- GIFT =========================================== -->
+  <div class="gift">
+    <div class="text-wrapper">
+      <div>
+        <p class="gift__title">
+          Your gift can do so much for animals in need.
+        </p>
+      </div>
+      <!-- gift__title -->
+      <hr />
+      <div class="gift__btn">
+        <a href="#" target="_blank" class="gift__link">Give now</a>
+      </div>
+      <!-- gift__btn -->
+    </div>
+    <!-- text-wrapper -->
+  </div>
+  <!-- gift -->
+
+  <!-- ARTICLE =========================================== -->
+  <article>
+    <div class="container">
+      <div class="news__container">
+        <div class="news__information">
+          <div>
+            <p class="news__title">Breaking</p>
+          </div>
+          <!-- news__title -->
+          <div>
+            <p class="news__body"><em>Our undercover investigation reveals the gruesome killing of
+                coyotes in Oregon for cash and prizes. Prevent this cruelty from
+                happening in your state!</em>
+            </p>
+          </div>
+          <!-- news__body -->
+          <div class="news__btn">
+            <a href="#" target="_blank" class="news__link">Learn How</a>
+          </div>
+          <!-- news__btn -->
+        </div><!-- news__information -->
+      </div>
+      <!-- news__container -->
+    </div>
+    <!-- container -->
+  </article>
 </body>
 
 </html>
