third div ready

--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Sirela-Gartanen</title>
+    <!-- Font Awesome =========================================== -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Sirela-Gartanen</title>
-  <!-- Font Awesome =========================================== -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
-
-<body>
-  <h1>The Beasts change</h1>
+  <body>
+    <h1>The Beasts</h1>
 
     <!-- **********JOHANNA*********** -->
-    <section class="container-section1">
+    <section>
       <div class="fox-image">
         <div class="text-box1">
-          <div>
-              <p>
-                  We think big. We are fearless. We stand up and fight for all animals
-                  who are suffering.
-                </p>
-          </div>
-          <div>
-              <p><a href="#" class="text-box1-link">Our big fights</a></p>
-          </div>
-
+          <p>
+            We think big. We are fearless. We stand up and fight for all animals
+            who are suffering.
+          </p>
           <p>
             <a href="#" class="text-box1-link"
-              >Our big fights <i class="fas fa-arrow-right"></i
+              ><strong>Our big fights</strong> <i class="fas fa-arrow-right"></i
             ></a>
           </p>
-          
         </div>
-      </div>
       </div>
 
       <div class="how-you-can-help">
         <div class="happy-dog">
-          <img id="happydog-img" src="assets/image/happydog.jpg" alt="happy-dog" />
+          <img
+            id="happydog-img"
+            src="assets/image/happydog.jpg"
+            alt="happy-dog"
+          />
         </div>
         <div class="text-box2">
-          <p>Together, we can create a more humane society.</p>
-          <a href="#" class="text-box2-link"><strong>How you can help</strong></a>
+          <p>
+            <span style="background-color: #FFCD03">Together</span>, we can
+            create a more humane society.
+          </p>
+          <a href="#" class="text-box2-link"
+            ><strong>How you can help </strong><i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
+      </div>
+      <div class="kitty-and-puppy">
+        <div class="kitty">
+          <div class="text-box-kitty">
+            <h3>PASS A LAW</h3>
+            <p>
+              The Preventing Animal Cruelty and Torture Act (PACT Act) will make
+              it a federal crime to commit malicious cruelty an animal on
+              federal property or in interstate commerce.
+            </p>
+            <label class="kitty-button"><a href="#">Use Your Voice</a></label>
+          </div>
+        </div>
+        <div class="puppy">
+          <div class="text-box-puppy">
+            <h3>PROTECT PETS</h3>
+            <p>
+              The Shelter Ally Project transports homeless pets to our shelter
+              and rescue partners. Support this and other lifesaving efforts.
+            </p>
+            <label class="puppy-button"><a href="#">Give Now</a></label>
+          </div>
         </div>
       </div>
     </section>
@@ -63,9 +90,11 @@
               <img src="./assets/image/hunting.png" alt="cruel to animals" />
             </div>
             <div class="change__body">
-              <a href="#">Undercover investigation exposes grisly cruelty at Oregon
+              <a href="#"
+                >Undercover investigation exposes grisly cruelty at Oregon
                 wildlife killing contest; lawmakers move to ban such events in
-                the state</a>
+                the state</a
+              >
             </div>
             <div class="change__bottom">
               <p>"A Human Wold" blog</p>
@@ -79,8 +108,10 @@
               <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
             </div>
             <div class="change__body">
-              <a href="#">The Humane Society of the United States makes new leadership
-                appointments and important governance changes</a>
+              <a href="#"
+                >The Humane Society of the United States makes new leadership
+                appointments and important governance changes</a
+              >
             </div>
             <div class="change__bottom">
               <p>Press release</p>
@@ -148,12 +179,12 @@
               <a href="#" target="_blank" class="news__link">Learn How</a>
             </div>
             <!-- news__btn -->
-          </div><!-- news__information -->
+          </div>
+          <!-- news__information -->
         </div>
         <!-- news__container -->
       </div>
       <!-- container -->
     </article>
-</body>
-
+  </body>
 </html>
