--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <div>
           <p><a href="#" class="text-box1-link">Our big fights</a></p>
         </div>
-
       </div>
 
       <div class="how-you-can-help">
@@ -79,15 +78,14 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!--Johanna ending -->
+    </section>
+    <!--Johanna ending -->
 
-  <!-- DEAN =========================================== -->
-  <section>
-    <div class="container">
-      <p class="changes__text">We drive real, tangible change for animals.</p>
-      <hr />
+    <!-- DEAN =========================================== -->
+    <section>
+      <div class="container">
+        <p class="changes__text">We drive real, tangible change for animals.</p>
+        <hr />
 
         <div class="changes">
           <div class="change">
@@ -106,8 +104,7 @@
             </div>
             <a href="#"><i class="fas fa-arrow-right"></i></a>
           </div>
-        </div>
-        <!-- change -->
+          <!-- change -->
 
           <div class="change">
             <div class="change__top">
@@ -124,59 +121,62 @@
             </div>
             <a href="#"><i class="fas fa-arrow-right"></i></a>
           </div>
-        <!-- change -->
+          <!-- change -->
 
-        <div class="change">
-          <div class="change__top">
-            <img src="./assets/image/2018.png" alt="2018 calendar" />
+          <div class="change">
+            <div class="change__top">
+              <img src="./assets/image/2018.png" alt="2018 calendar" />
+            </div>
+            <div class="change__body">
+              <a href="#">A big year for animals</a>
+            </div>
+            <div class="change__bottom">
+              <p><em>All Animals</em> magazine</p>
+            </div>
+            <a href="#"><i class="fas fa-arrow-right"></i></a>
           </div>
-          <div class="change__body">
-            <a href="#">A big year for animals</a>
-          </div>
-          <div class="change__bottom">
-            <p><em>All Animals</em> magazine</p>
-          </div>
-          <a href="#"><i class="fas fa-arrow-right"></i></a>
+          <!-- change -->
         </div>
-        <!-- change -->
+        <!-- changes -->
       </div>
-      <!-- changes -->
-    </div>
-    <!-- container -->
-  </section>
+      <!-- container -->
+    </section>
 
-  <!-- GIFT =========================================== -->
-  <div class="gift">
-    <div class="text-wrapper">
-      <div>
-        <p class="gift__title">
-          Your gift can do so much for animals in need.
-        </p>
+    <!-- GIFT =========================================== -->
+    <div class="gift">
+      <div class="text-wrapper">
+        <div>
+          <p class="gift__title">
+            Your gift can do so much for animals in need.
+          </p>
+        </div>
+        <!-- gift__title -->
+        <hr />
+        <div class="gift__btn">
+          <a href="#" target="_blank" class="gift__link">Give now</a>
+        </div>
+        <!-- gift__btn -->
       </div>
-      <!-- gift__title -->
-      <hr />
-      <div class="gift__btn">
-        <a href="#" target="_blank" class="gift__link">Give now</a>
-      </div>
-      <!-- gift__btn -->
+      <!-- text-wrapper -->
     </div>
-    <!-- text-wrapper -->
-  </div>
-  <!-- gift -->
+    <!-- gift -->
 
-  <!-- ARTICLE =========================================== -->
-  <article>
-    <div class="container">
-      <div class="news__container">
-        <div class="news__information">
-          <div>
-            <p class="news__title">Breaking</p>
-          </div>
-          <!-- news__title -->
-          <div>
-            <p class="news__body"><em>Our undercover investigation reveals the gruesome killing of
-                coyotes in Oregon for cash and prizes. Prevent this cruelty from
-                happening in your state!
+    <!-- ARTICLE =========================================== -->
+    <article>
+      <div class="container">
+        <div class="news__container">
+          <div class="news__information">
+            <div>
+              <p class="news__title">Breaking</p>
+            </div>
+            <!-- news__title -->
+            <div>
+              <p class="news__body">
+                <em
+                  >Our undercover investigation reveals the gruesome killing of
+                  coyotes in Oregon for cash and prizes. Prevent this cruelty
+                  from happening in your state!</em
+                >
               </p>
             </div>
             <!-- news__body -->
