--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>The Beasts</h1>
+  <h1>The Beasts change</h1>
 
   <!-- **********JOHANNA*********** -->
   <section>
@@ -32,7 +32,6 @@
           <p><a href="#" class="text-box1-link">Our big fights</a></p>
         </div>
       </div>
-
     </div>
 
     <div class="how-you-can-help">
