working with responsivness

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
             ></a>
           </p>
         </div>
-        <div>
-          <p><a href="#" class="text-box1-link">Our big fights</a></p>
-        </div>
       </div>
 
       <div class="how-you-can-help">
@@ -50,9 +47,12 @@
             <span style="background-color: #FFCD03">Together</span>, we can
             create a more humane society.
           </p>
-          <a href="#" class="text-box2-link"
-            ><strong>How you can help </strong><i class="fas fa-arrow-right"></i
-          ></a>
+          <div class="box2-link">
+            <a href="#" class="text-box2-link"
+              ><strong>How you can help </strong
+              ><i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
         </div>
       </div>
       <div class="kitty-and-puppy">
@@ -61,7 +61,7 @@
             <h3>PASS A LAW</h3>
             <p>
               The Preventing Animal Cruelty and Torture Act (PACT Act) will make
-              it a federal crime to commit malicious cruelty an animal on
+              it a federal crime to commit malicious cruelty to an animal on
               federal property or in interstate commerce.
             </p>
             <label class="kitty-button"><a href="#">Use Your Voice</a></label>
