--- a/index.html
+++ b/index.html
@@ -17,30 +17,93 @@
   <body>
     <header>
       <div class="header">
-        <div class="img-box">
-          <img src="/assets/images/BEASTS3.PNG" alt="" />
-        </div>
-        <div class="navbar">
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li><a href="#">Our Imapct</a></li>
-            <li><a href="#">Video</a></li>
+        <div class="header-top">
+          <div class="toggle">
+            <label>&#9776;</label>
+            <!-- <i class="fas fa-bars"></i> -->
+            <ul>
+              <li>
+                <a href="#"><i class="fas fa-home"></i> Home</a>
+              </li>
+              <li><a href="#"> Our Impact</a></li>
+              <li>
+                <a href="#"><i class="fab fa-youtube"></i> Video</a>
+              </li>
 
-            <li><a href="#"> Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="btn">
-          <a href="#" class="donate-btn">Donate</a>
-          <div class="container">
-            <div class="search-box">
-              <input type="text" />
-              <span></span>
+              <li>
+                <a href="#"><i class="fas fa-mobile-alt"></i> Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="btn">
+            <div class="float-right">
+              <div class="donate-btn">
+                <a href="#" class="donate-link">Donate</a>
+              </div>
+
+              <div class="search-container">
+                <div class="search-box">
+                  <input type="text" />
+                  <span></span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- header -->
+
+      <div class="bottom-container">
+        <div class="header-title">
+          <h1 class="bottom-title">Fight For All Animals</h1>
+        </div>
+
+        <div class="bg-box-right">
+          <a href="#" class="link-wrapper">
+            <!---->
+            <div class="bg-bottom">
+              <div class="bg-wrapper">
+                <div>
+                  <p class="bg-big">Big Fight</p>
+                </div>
+                <div>
+                  <p class="bg-banning">Banning Trophy Hunting</p>
+                </div>
+                <div>
+                  <p class="bg-save">
+                    To save wild creatuers from death for the sake of a prize.
+                  </p>
+                </div>
+                <!--div-p-->
+              </div>
+              <!--bg-wrapper-->
+            </div>
+            <!--bg-bottom-->
+          </a>
+          <!--link-wrapper-->
+        </div>
+        <!--bg-box-right-->
+      </div>
+      <!-- bottom-container -->
     </header>
+
+    <div class="text-box">
+      <p class="text-box-content">
+        With your help, we fight the big fights, working to end all forms of
+        animal cruelty and achieve the vision behind our name:
+        <strong>A humane society.</strong>
+      </p>
+      <div class="background-box"></div>
+    </div>
+    <div class="video-container">
+      <iframe
+        width="1800px"
+        height="1012px"
+        src="https://www.youtube.com/embed/SAa5hRb5ofM"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
   </body>
 </html>
