--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sirela-Gartanen</title>
+    <!-- Google Fonts =========================================== -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900"
+      rel="stylesheet"
+    />
+
     <!-- Font Awesome =========================================== -->
     <link
       rel="stylesheet"
@@ -28,7 +34,7 @@
           </p>
           <p>
             <a href="#" class="text-box1-link"
-              ><strong>Our big fights</strong> <i class="fas fa-arrow-right"></i
+              >Our big fights <i class="fas fa-arrow-right"></i
             ></a>
           </p>
         </div>
@@ -64,7 +70,9 @@
               it a federal crime to commit malicious cruelty to an animal on
               federal property or in interstate commerce.
             </p>
-            <label class="kitty-button"><a href="#">Use Your Voice</a></label>
+            <label class="kitty-button"
+              ><a href="#"><strong>Use Your Voice</strong></a></label
+            >
           </div>
         </div>
         <div class="puppy">
@@ -74,13 +82,14 @@
               The Shelter Ally Project transports homeless pets to our shelter
               and rescue partners. Support this and other lifesaving efforts.
             </p>
-            <label class="puppy-button"><a href="#">Give Now</a></label>
+            <label class="puppy-button"
+              ><a href="#"><strong>Give Now</strong></a></label
+            >
           </div>
         </div>
       </div>
     </section>
     <!--Johanna ending -->
-
     <!-- DEAN =========================================== -->
     <section>
       <div class="container">
