--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
       <div>
         <div class="text-box1">
           <p>
-            We think big. We are fearless. We stand up and fight for all animals
-            who are suffering.
+            We think big. We are fearless. We stand up and fight for all
+            animals who are suffering.
           </p>
           <p>
-            <a href="#" class="text-box1-link"><strong>Our big fights</strong> <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="text-box1-link"><strong>Our big fights</strong>
+              <i class="fas fa-arrow-right"></i></a>
           </p>
-        </div>
-        <div>
-          <p><a href="#" class="text-box1-link">Our big fights</a></p>
         </div>
       </div>
     </div>
@@ -79,48 +77,72 @@
       <hr />
 
       <div class="changes">
-        <div class="change">
+        <div class="change change__item">
           <div class="change__top">
-            <img src="./assets/image/hunting.png" alt="cruel to animals" />
+            <a href="#">
+              <img src="./assets/image/hunting.png" alt="cruel to animals" />
+            </a>
           </div>
           <div class="change__body">
-            <a href="#">Undercover investigation exposes grisly cruelty at Oregon
-              wildlife killing contest; lawmakers move to ban such events in
-              the state</a>
+            <div class="change__body__content change__item1">
+              <a href="#">Undercover investigation exposes grisly cruelty at Oregon
+                wildlife killing contest; lawmakers move to ban such events in
+                the state</a>
+            </div>
+
+            <div class="change__bottom">
+              <p>"A Human Wold" blog</p>
+              <div id="change__btn">
+                <a href="#"><i class="fas fa-arrow-right"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="change__bottom">
-            <p>"A Human Wold" blog</p>
-          </div>
-          <a href="#"><i class="fas fa-arrow-right"></i></a>
+
+
         </div>
         <!-- change -->
 
         <div class="change">
           <div class="change__top">
-            <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
+            <a href="#">
+              <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
+            </a>
           </div>
           <div class="change__body">
-            <a href="#">The Humane Society of the United States makes new leadership
-              appointments and important governance changes</a>
+            <div class="change__body__content change__item2">
+              <a href="#">The Humane Society of the United States makes new leadership
+                appointments and important governance changes</a>
+            </div>
+            <div class="change__bottom">
+              <p>Press release</p>
+              <div id="change__btn">
+                <a href="#"><i class="fas fa-arrow-right"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="change__bottom">
-            <p>Press release</p>
-          </div>
-          <a href="#"><i class="fas fa-arrow-right"></i></a>
+          
         </div>
         <!-- change -->
 
-        <div class="change">
+        <div class="change change__special">
           <div class="change__top">
-            <img src="./assets/image/2018.png" alt="2018 calendar" />
+            <a href="#">
+              <img src="./assets/image/2018.png" alt="2018 calendar" />
+            </a>
           </div>
+
           <div class="change__body">
-            <a href="#">A big year for animals</a>
+            <div class="change__body__content change__item3">
+              <a href="#">A big year for animals</a>
+            </div>
+
+            <div class="change__bottom">
+              <p><em>All Animals</em> magazine</p>
+              <div id="change__btn">
+                <a href="#"><i class="fas fa-arrow-right"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="change__bottom">
-            <p><em>All Animals</em> magazine</p>
-          </div>
-          <a href="#"><i class="fas fa-arrow-right"></i></a>
         </div>
         <!-- change -->
       </div>
