header looks ok

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <div class="header">
+      <div class="header-container">
         <div class="header-top">
           <div class="toggle">
             <label>&#9776;</label>
@@ -71,10 +71,15 @@
                 </div>
                 <div>
                   <p class="bg-save">
-                    To save wild creatuers from death for the sake of a prize.
+                    To save wild creatuers from death for the <br />
+                    sake of a prize.
                   </p>
                 </div>
                 <!--div-p-->
+
+                <!--arrow-->
+
+                <i class="fas fa-arrow-right"></i>
               </div>
               <!--bg-wrapper-->
             </div>
@@ -97,8 +102,7 @@
     </div>
     <div class="video-container">
       <iframe
-        width="1800px"
-        height="1012px"
+       
         src="https://www.youtube.com/embed/SAa5hRb5ofM"
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
