i added a comment after <!--arrow´-->

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 
                 <!--arrow-->
 
+
+
+                <!--this is one change-->
                 <i class="fas fa-arrow-right"></i>
               </div>
               <!--bg-wrapper-->
