small corrections on font-sizes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
   </head>
 
   <body>
-    <h1>The Beasts</h1>
-
     <!-- **********JOHANNA*********** -->
     <section>
       <div class="fox-image">
@@ -34,7 +32,7 @@
           </p>
           <p>
             <a href="#" class="text-box1-link"
-              >Our big fights <i class="fas fa-arrow-right"></i
+              ><strong>Our Big Fights</strong> <i class="fas fa-arrow-right"></i
             ></a>
           </p>
         </div>
