--- a/index.html
+++ b/index.html
@@ -12,222 +12,105 @@
       crossorigin="anonymous"
     />
     <title>Sirela-Gartanen</title>
-    <!-- Google Fonts =========================================== -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900"
-      rel="stylesheet"
-    />
-
-    <!-- Font Awesome =========================================== -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
-    <h1>The Beasts</h1>
+    <header>
+      <div class="header-container">
+        <div class="header-top">
+          <div class="toggle">
+            <label>&#9776;</label>
+            <!-- <i class="fas fa-bars"></i> -->
+            <ul>
+              <li>
+                <a href="#"><i class="fas fa-home"></i> Home</a>
+              </li>
+              <li><a href="#"> Our Impact</a></li>
+              <li>
+                <a href="#"><i class="fab fa-youtube"></i> Video</a>
+              </li>
 
-    <!-- **********JOHANNA*********** -->
-    <section>
-      <div class="fox-image">
-        <div class="text-box1">
-          <p>
-            We think big. We are fearless. We stand up and fight for all animals
-            who are suffering.
-          </p>
-          <p>
-            <a href="#" class="text-box1-link"
-              >Our big fights <i class="fas fa-arrow-right"></i
-            ></a>
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="how-you-can-help">
-      <div class="happy-dog">
-        <img id="happydog-img" src="assets/image/happydog.jpg" alt="happy-dog" />
-      </div>
-      <div class="text-box2">
-        <p>
-          <span style="background-color: #FFCD03">Together</span>, we can
-          create a more humane society.
-        </p>
-        <a href="#" class="text-box2-link"><strong>How you can help </strong><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="kitty-and-puppy">
-      <div class="kitty">
-        <div class="text-box-kitty">
-          <h3>PASS A LAW</h3>
-          <p>
-            The Preventing Animal Cruelty and Torture Act (PACT Act) will make
-            it a federal crime to commit malicious cruelty an animal on
-            federal property or in interstate commerce.
-          </p>
-          <label class="kitty-button"><a href="#">Use Your Voice</a></label>
-        </div>
-      </div>
-      <div class="kitty-and-puppy">
-        <div class="kitty">
-          <div class="text-box-kitty">
-            <h3>PASS A LAW</h3>
-            <p>
-              The Preventing Animal Cruelty and Torture Act (PACT Act) will make
-              it a federal crime to commit malicious cruelty an animal on
-              federal property or in interstate commerce.
-            </p>
-            <label class="kitty-button"
-              ><a href="#"><strong>Use Your Voice</strong></a></label
-            >
+              <li>
+                <a href="#"><i class="fas fa-mobile-alt"></i> Contact Us</a>
+              </li>
+            </ul>
           </div>
-        </div>
-        <div class="puppy">
-          <div class="text-box-puppy">
-            <h3>PROTECT PETS</h3>
-            <p>
-              The Shelter Ally Project transports homeless pets to our shelter
-              and rescue partners. Support this and other lifesaving efforts.
-            </p>
-            <label class="puppy-button"
-              ><a href="#"><strong>Give Now</strong></a></label
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--Johanna ending -->
-    <!-- DEAN =========================================== -->
-    <section>
-      <div class="container">
-        <p class="changes__text">We drive real, tangible change for animals.</p>
-        <hr />
-
-        <div class="changes">
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/hunting.png" alt="cruel to animals" />
-            </a>
-          </div>
-          <div class="change__body">
-            <div class="change__body__content change__item1">
-              <a href="#">Undercover investigation exposes grisly cruelty at Oregon
-                wildlife killing contest; lawmakers move to ban such events in
-                the state</a>
-            </div>
-
-            <div class="change__bottom">
-              <p>"A Human Wold" blog</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
+          <div class="btn">
+            <div class="float-right">
+              <div class="donate-btn">
+                <a href="#" class="donate-link">Donate</a>
               </div>
-            </div>
-          </div>
 
-
-        </div>
-        <!-- change -->
-
-        <div class="change">
-          <div class="change__top">
-            <a href="#">
-              <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
-            </a>
-          </div>
-          <div class="change__body">
-            <div class="change__body__content change__item2">
-              <a href="#">The Humane Society of the United States makes new leadership
-                appointments and important governance changes</a>
-            </div>
-            <div class="change__bottom">
-              <p>Press release</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-          
-        </div>
-        <!-- change -->
-
-        <div class="change change__special">
-          <div class="change__top">
-            <a href="#">
-              <img src="./assets/image/2018.png" alt="2018 calendar" />
-            </a>
-          </div>
-
-          <div class="change__body">
-            <div class="change__body__content change__item3">
-              <a href="#">A big year for animals</a>
-            </div>
-
-            <div class="change__bottom">
-              <p><em>All Animals</em> magazine</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
+              <div class="search-container">
+                <div class="search-box">
+                  <input type="text" />
+                  <span></span>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- change -->
       </div>
-      <!-- changes -->
-    </div>
-    <!-- container -->
-  </section>
+      <!-- header -->
 
-  <!-- GIFT =========================================== -->
-  <div class="gift">
-    <div class="text-wrapper">
-      <div>
-        <p class="gift__title">
-          Your gift can do so much for animals in need.
-        </p>
-      </div>
-      <!-- gift__title -->
-      <hr />
-      <div class="gift__btn">
-        <a href="#" target="_blank" class="gift__link">Give now</a>
-      </div>
-      <!-- gift__btn -->
-    </div>
-    <!-- text-wrapper -->
-  </div>
-  <!-- gift -->
-
-  <!-- ARTICLE =========================================== -->
-  <article>
-    <div class="container">
-      <div class="news__container">
-        <div class="news__information">
-          <div>
-            <p class="news__title">Breaking</p>
-          </div>
-          <!-- news__title -->
-          <div>
-            <p class="news__body">
-              <em>Our undercover investigation reveals the gruesome killing of
-                coyotes in Oregon for cash and prizes. Prevent this cruelty
-                from happening in your state!</em>
-            </p>
-          </div>
-          <!-- news__body -->
-          <div class="news__btn">
-            <a href="#" target="_blank" class="news__link">Learn How</a>
-          </div>
-          <!-- news__btn -->
+      <div class="bottom-container">
+        <div class="header-title">
+          <h1 class="bottom-title">Fight For All Animals</h1>
         </div>
-        <!-- news__information -->
-      </div>
-      <!-- news__container -->
-    </div>
-    <!-- container -->
-  </article>
-</body>
 
+        <div class="bg-box-right">
+          <a href="#" class="link-wrapper">
+            <!---->
+            <div class="bg-bottom">
+              <div class="bg-wrapper">
+                <div>
+                  <p class="bg-big">Big Fight</p>
+                </div>
+                <div>
+                  <p class="bg-banning">Banning Trophy Hunting</p>
+                </div>
+                <div>
+                  <p class="bg-save">
+                    To save wild creatuers from death for the <br />
+                    sake of a prize.
+                  </p>
+                </div>
+                <!--div-p-->
+
+                <!--arrow-->
+
+
+
+                <!--this is one change-->
+                <i class="fas fa-arrow-right"></i>
+              </div>
+              <!--bg-wrapper-->
+            </div>
+            <!--bg-bottom-->
+          </a>
+          <!--link-wrapper-->
+        </div>
+        <!--bg-box-right-->
+      </div>
+      <!-- bottom-container -->
+    </header>
+
+    <div class="text-box">
+      <p class="text-box-content">
+        With your help, we fight the big fights, working to end all forms of
+        animal cruelty and achieve the vision behind our name:
+        <strong>A humane society.</strong>
+      </p>
+      <div class="background-box"></div>
+    </div>
+    <div class="video-container">
+      <iframe
+       
+        src="https://www.youtube.com/embed/SAa5hRb5ofM"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </body>
 </html>
