comments + returning older work to develop

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <h1>The Beasts</h1>
-
+    <!--evans RETURNING-->
     <!-- **********JOHANNA*********** -->
     <section>
       <div class="fox-image">
